# vision-context-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EVALUACION_INTEGRAL.md  LICENSE  README.md  execute_all_tests.py  generate_final_report.py  generate_test_files.py  install_dependencies.py  performance_test.py  production_validation.py  pyproject.toml  run_test_suite.py  security_test.py  test_basic.py  test_config.json  test_extensive.py  test_opencv.py  test_server.py  test_simple.py  test_validation.py
docs/: TROUBLESHOOTING.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
reports/: final_report.json
scripts/validation/: create_test_image.py  validate_deployment.py
src/vision_context_mcp/: __init__.py  server.py  validation.py
src/vision_context_mcp/analyzers/: __init__.py  entity_extractor.py  image_analyzer.py  video_analyzer.py
src/vision_context_mcp/preprocessors/: __init__.py  depth.py  edges.py  pose.py  segmentation.py
test_results/: summary.json
tests/validation/: test_all_tools.py
